<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="32dp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etNamaLengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etNomorTelepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomor_telp"
            android:inputType="phone"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etKonfirmasiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/konfirmasi_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="10dp"/>

        <CheckBox
            android:id="@+id/cbSyaratKetentuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/syarat_ketentuan"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="2dp"/>

        <Button
            android:id="@+id/btnDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:fontFamily="@font/poppins_semibold"
            android:backgroundTint="@color/green_button"
            android:textColor="@android:color/white"
            android:padding="5dp"/>

    </LinearLayout>
</ScrollView>